[package]
name = "stock_analyze"
version = "0.1.0"
authors = ["zsynacl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.5", features = ["sqlite"]}
libsqlite3-sys = { version = "0.18.0", features = ["bundled"]}
dotenv = "0.15.0"
chrono = "0.4.13"